--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cachetools==5.3.3
 certifi==2024.6.2
 click==8.1.7
 dnspython==2.6.1
+ecdsa==0.19.0
 email_validator==2.1.1
 fastapi==0.111.0
 fastapi-cli==0.0.4
@@ -18,14 +19,20 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 orjson==3.10.3
+passlib==1.7.4
+pyasn1==0.6.0
 pydantic==2.7.3
 pydantic_core==2.18.4
 Pygments==2.18.0
+PyMySQL==1.1.1
 python-dotenv==1.0.1
+python-jose==3.3.0
 python-multipart==0.0.9
 PyYAML==6.0.1
 rich==13.7.1
+rsa==4.9
 shellingham==1.5.4
+six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.30
 starlette==0.37.2
