--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ annotated-types==0.7.0
 anyio==4.4.0
 cachetools==5.3.3
 certifi==2024.6.2
+cffi==1.16.0
 click==8.1.7
+cryptography==42.0.8
 dnspython==2.6.1
 ecdsa==0.19.0
 email_validator==2.1.1
@@ -21,6 +23,7 @@ mdurl==0.1.2
 orjson==3.10.3
 passlib==1.7.4
 pyasn1==0.6.0
+pycparser==2.22
 pydantic==2.7.3
 pydantic_core==2.18.4
 Pygments==2.18.0
